# PointCloudProcess

./: CMakeLists.txt  README.md  feature_extractor.cpp  handcrafted_local_features.cpp  keypoints_extraction.cpp  pc_segmentation.cpp  pointcloud_process.cpp  pointcloud_process_test.cpp
include/: handcrafted_local_features.h  keypoints_extraction.h  pc_segmentation.h  region_growing.h
test_data/benchmark_datasets/oxford/2014-05-19-13-20-57/: pointcloud_locations_20m_10overlap.csv
test_data/benchmark_datasets/oxford/2014-06-26-09-31-18/: pointcloud_locations_20m_10overlap.csv
test_data/benchmark_datasets/oxford/2014-06-26-09-53-12/: pointcloud_locations_20m_10overlap.csv
